Cross cutting concerns added
code added for Cross cutting concern like Tracing(added correlation-id)and logging

--- a/section9-API Gateway/gatewayserver/src/main/resources/application.yml
+++ b/section9-API Gateway/gatewayserver/src/main/resources/application.yml
@@ -28,4 +28,10 @@ info:
     description: "Bank gateway server Application"
     version: "1.0.0"
 
+logging:
+  level:
+    com:
+      eazybytes:
+        gatewayserver: DEBUG
+
 
