--- a/section9-API Gateway/docker-compose/qa/docker-compose.yml
+++ b/section9-API Gateway/docker-compose/qa/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   configserver:
-    image: "userdoc09/configserver:s8"
+    image: "userdoc09/configserver:s9"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -8,20 +8,20 @@ services:
       test: "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
       timeout: 5s
-      #      retires: 10
+      retries: 10
       start_period: 10s
     extends:
       file: common-config.yml
       service: microservice-base-config
 
   eurekaserver:
-    image: "userdoc09/eurekaserver:s8"
+    image: "userdoc09/eurekaserver:s9"
     container_name: eurekaserver-ms
+    ports:
+      - "8070:8070"
     depends_on:
       configserver:
         condition: service_healthy
-    ports:
-      - "8070:8070"
     healthcheck:
       test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
@@ -35,7 +35,7 @@ services:
       SPRING_APPLICATION_NAME: "eurekaserver"
 
   accounts:
-    image: "userdoc09/accounts:s8"
+    image: "userdoc09/accounts:s9"
     container_name: accounts-ms
     ports:
       - "8080:8080"
@@ -44,6 +44,13 @@ services:
         condition: service_healthy
       eurekaserver:
         condition: service_healthy
+    healthcheck:
+      test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+
     environment:
       SPRING_APPLICATION_NAME: "accounts"
     extends:
@@ -51,10 +58,16 @@ services:
       service: microservice-eurekaserver-config
 
   loans:
-    image: "userdoc09/loans:s8"
+    image: "userdoc09/loans:s9"
     container_name: loans-ms
     ports:
       - "8090:8090"
+    healthcheck:
+      test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     depends_on:
       configserver:
         condition: service_healthy
@@ -67,7 +80,7 @@ services:
       service: microservice-eurekaserver-config
 
   cards:
-    image: "userdoc09/cards:s8"
+    image: "userdoc09/cards:s9"
     container_name: cards-ms
     ports:
       - "9000:9000"
@@ -76,8 +89,32 @@ services:
         condition: service_healthy
       eurekaserver:
         condition: service_healthy
+    healthcheck:
+      test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     environment:
       SPRING_APPLICATION_NAME: "cards"
+    extends:
+      file: common-config.yml
+      service: microservice-eurekaserver-config
+
+  gatewayserver:
+    image: "userdoc09/gatewayserver:s9"
+    container_name: gatewayserver-ms
+    ports:
+      - "8072:8072"
+    depends_on:
+      accounts:
+        condition: service_healthy
+      loans:
+        condition: service_healthy
+      cards:
+        condition: service_healthy
+    environment:
+      SPRING_APPLICATION_NAME: "gatewayserver"
     extends:
       file: common-config.yml
       service: microservice-eurekaserver-config
