--- a/section11-Log aggregation/docker-compose/observability/grafana/datasource.yml
+++ b/section11-Log aggregation/docker-compose/observability/grafana/datasource.yml
@@ -1,50 +1,10 @@
-apiversion: 1
-
-deleteDataSources:
-  - name: Prometheus
+apiVersion: 1
+datasources:
   - name: Loki
-  - name: Tempo
-
-datasrouces:
-- name: Prometheus
-  type: prometheus
-  uid: prometheus
-  url: htt://prometheus:9090
-  access: proxy
-  orgId: 1
-  basicAuth: false
-  isDefault: false
-  version: 1
-  editable: true
-  jsonData:
-    httpMethod: GET
-- name: Loki
-  type: loki
-  uid: loki
-  access: proxy
-  orgId: 1
-  editable: false
-  url: http://gateway:3100
-  jsonData:
-    httpHeaderName: "X-Scope-OrgTD"
-    derivedField:
-      - datasourceUid: tempo
-        matcherRegex: "\\[.+.,(.+),.+\\]"
-        name: TraceID
-        url: '$${_value.raw}'
-  secureJsonData:
-    httpHeaderValue1: "tenant1"
-- name: Tempo
-  type: tempo
-  uid: tempo
-  url: http://tempo:3100
-  access: proxy
-  argId: 1
-  basicAuth: false
-  isDefault: false
-  version: 1
-  editable: true
-  jsonData:
-    httpMethod: GET
-    serviceMap:
-      datasourceUid: 'prometheus'
+    type: loki
+    access: proxy
+    url: http://gateway:3100
+    jsonData:
+      httpHeaderName1: "X-Scope-OrgID"
+    secureJsonData:
+      httpHeaderValue1: "tenant1"
