--- a/section11-Log aggregation/docker-compose/prod/docker-compose.yml
+++ b/section11-Log aggregation/docker-compose/prod/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   read:
-    image: grafana/loki:3.0.0
+    image: grafana/loki:3.1.2
     command: "-config.file=/etc/loki/config.yaml -target=read"
     ports:
       - 3101:3100
@@ -13,7 +13,7 @@ services:
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
       interval: 10s
-      timeout: 5s
+      timeout: 10s
       retries: 5
     networks: &loki-dns
       eazybank:
@@ -21,7 +21,7 @@ services:
           - loki
 
   write:
-    image: grafana/loki:3.0.0
+    image: grafana/loki:3.1.2
     command: "-config.file=/etc/loki/config.yaml -target=write"
     ports:
       - 3102:3100
@@ -32,15 +32,27 @@ services:
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
       interval: 10s
-      timeout: 5s
+      timeout: 10s
       retries: 5
     depends_on:
       - minio
     networks:
       <<: *loki-dns
 
+  promtail:
+    image: grafana/promtail:2.8.3
+    volumes:
+      - ../obervability/promtail/promtail-local-config.yaml:/etc/promtail/config.yaml:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: -config.file=/etc/promtail/config.yml
+    depends_on:
+      - gateway
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   alloy:
-    image: grafana/alloy:v1.0.0
+    image: grafana/alloy:v1.5.1
     volumes:
       - ../observability/alloy/alloy-local-config.yaml:/etc/alloy/config.alloy:ro
       - /var/run/docker.sock:/var/run/docker.sock
@@ -116,15 +128,30 @@ services:
       - sh
       - -euc
       - |
+        mkdir -p /etc/grafana/provisioning/datasources
+        cat <<EOF> /etc/grafana/provisioning/datasources/datasource.yml
+        apiVersion: 1
+        datasources:
+          - name: Loki
+            type: loki
+            access: proxy
+            url: http://gateway:3100
+            jsonData:
+              httpHeaderName1: "X-Scope-OrgID"
+            secureJsonData:
+              httpHeaderValue1: "tenant1"
+        EOF
         /run.sh
     ports:
       - "3000:3000"
     volumes:
       - ../observability/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: -config.file=/etc/grafana/provisioning/datasources/datasource.yml
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1" ]
       interval: 10s
-      timeout: 5s
+      timeout: 50s
       retries: 5
     extends:
       file: common-config.yml
