--- a/section11-Log aggregation/docker-compose/observability/grafana/datasource.yml
+++ b/section11-Log aggregation/docker-compose/observability/grafana/datasource.yml
@@ -1,4 +1,10 @@
 apiVersion: 1
+
+deleteDataSources:
+  - name: Prometheus
+  - name: Loki
+  - name: Tempo
+
 datasources:
   - name: Loki
     type: loki
@@ -6,5 +12,36 @@ datasources:
     url: http://gateway:3100
     jsonData:
       httpHeaderName1: "X-Scope-OrgID"
+#      derivedField:
+#        - datasourceUid: tempo
+#          matcherRegex: "\\[.+.,(.+),.+\\]"
+#          name: TraceID
+#          url: '$${_value.raw}'
     secureJsonData:
       httpHeaderValue1: "tenant1"
+  - name: Prometheus
+    type: prometheus
+    uid: prometheus
+    url: htt://prometheus:9090
+    access: proxy
+    orgId: 1
+    basicAuth: false
+    isDefault: false
+    version: 1
+    editable: true
+    jsonData:
+      httpMethod: GET
+#  - name: Tempo
+#    type: tempo
+#    uid: tempo
+#    url: http://tempo:3100
+#    access: proxy
+#    argId: 1
+#    basicAuth: false
+#    isDefault: false
+#    version: 1
+#    editable: true
+#    jsonData:
+#      httpMethod: GET
+#      serviceMap:
+#        datasourceUid: 'prometheus'
